--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "firebase": "2.1.x",
     "angularfire": "0.9.1",
     "geofire": "~3.2.0",
+    "lodash": "3.10.1",
     "angular-google-maps": "~2.0.12",
     "angular-bootstrap": "~0.12.0"
   },
